(Re)allow copying image documents directly

In https://crrev.com/c/924027, we blocked copy command if selection is
hidden, but also incidentally broke copying on image documents because:
- We don't have visible selection on image document
- Copying on image document is done via a fast path that doesn't check
  selection at all, but the CL blocked the fast path

This patch moves the fast path before checking selection visibility,
so that the original copy behavior on image documents is recovered.

Bug: 845957
Change-Id: I920198d13ab3aa387f550c5c213fcbadc42fd43e
Reviewed-on: https://chromium-review.googlesource.com/1072730
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561989}
Former-commit-id: bbc2ac0d33c867859071da273d3a3c3562e89b80